--- a/.gitignore
+++ b/.gitignore
@@ -869,13 +869,14 @@ compile_commands.json
 
 *_qmlcache.qrc
 Java/userdictionary.txt
-
 .ztr-directory
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
+.idea/
+.idea/workspace.xml
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
@@ -944,6 +945,10 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+venv/
+Kotlin/Calculator/.idea/workspace.xml
+Kotlin/Calculator/.idea/workspace.xml
+
 .gradle
 **/build/
 !src/**/build/
@@ -959,3 +964,4 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+Kotlin/Calculator/.idea/workspace.xml
