Refine files and add GLFW and Allegro

--- a/C++/Calculator/makefile
+++ b/C++/Calculator/makefile
@@ -1,5 +1,5 @@
 CXX = g++
-CXXFLAGS = -std=c++11 -Wall -pipe -O2
+CXXFLAGS = -v -std=c++11 -Wall -Wextra -g -pipe -O2
 
 PROGRAM = calculator
 OBJECTS = $(PROGRAM).o
@@ -7,12 +7,12 @@ OBJECTS = $(PROGRAM).o
 .SUFFIXES: .o .cpp
 
 .cpp.o:
-	$(CXX) $(CXXFLAGS) -c -o $@ $<
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 all: $(PROGRAM)
 
 $(PROGRAM): $(OBJECTS)
-	$(CXX) $(CXXFLAGS) $(OBJECTS) -o $(PROGRAM)
+	$(CXX) $(CXXFLAGS) $< -o $@
 
 clean:
-	rm -f *.o $(PROGRAM)
+	rm -f *.o $(PROGRAM) *.exe
